Fixing h3 tag alignment within news_list div

--- a/index.css
+++ b/index.css
@@ -52,7 +52,8 @@ p.winter1 {
 
 #news_list h3 {
 	color: #000080;
-	margin-left: 16em;
+  margin-left: 10.25em;
+  font-size: 25px;
 }
 
 dl {
